--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+h1 {
+  text-align: center;
+}
+
+#canvas {
+  display: block;
 }
